@@ -137,9 +137,8 @@ static CMPIData __aft_getArgAt(const CMPIArgs * args,
       rv.type = CMPI_string;
    }
    else if (rv.type == CMPI_ref) {
-      char *msg;
       rv.value.ref = getObjectPath(
-         (char*)ClObjectGetClString(&ca->hdr, (ClString *) & rv.value.chars), &msg);
+         (char*)ClObjectGetClString(&ca->hdr, (ClString *) & rv.value.chars), NULL);
    }
    else if (rv.type & CMPI_ARRAY && rv.value.array) {
       rv.value.array =
